--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-name-prop": "^3.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "framer-motion": "^4.1.17",
+    "get-youtube-id": "^1.0.1",
     "html-dom-parser": "^3.1.2",
     "moment": "^2.29.1",
     "next": "^12.2.5",
