--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "next": "^12.2.5",
     "node-vibrant": "^3.2.1-alpha.1",
+    "notistack": "^2.0.8",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "17.0.2",
