--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@ffmpeg/core": "^0.9.0",
+    "@ffmpeg/ffmpeg": "^0.9.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.0.3",
+    "aws-amplify": "^5.0.18",
     "axios": "^0.24.0",
     "bootstrap-icons": "^1.9.1",
     "browser-image-compression": "^2.0.0",
     "class-name-prop": "^3.0.0",
+    "file-saver": "^2.0.5",
     "fluent-ffmpeg": "^2.1.2",
     "framer-motion": "^4.1.17",
     "get-youtube-id": "^1.0.1",
@@ -25,6 +29,7 @@
     "next": "^12.2.5",
     "node-vibrant": "^3.2.1-alpha.1",
     "notistack": "^2.0.8",
+    "nouislider-react": "^3.4.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "17.0.2",
